--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         let currentQuestion = 0;
         const questions = ["q1.png", "q2.png", "q3.png", "q4.png", "q5.png"];
 
-        // Base64 Encoded Answers (to obscure them)
-        const encryptedAnswers = ["NA==", "MjQ=", "MQ==", "MzA=", "OQ=="]; // ["4", "24", "1", "30", "9"]
+        // Correctly Base64 Encoded Answers
+        const encryptedAnswers = ["NA==", "MjQ=", "MQ==", "MzA=", "OQ=="]; // Encoded for ["4", "24", "1", "30", "9"]
 
         let userName = "", userRoll = "";
 
         function decodeBase64(encoded) {
-            return atob(encoded);  // Decode Base64
+            return atob(encoded).trim();  // Decode Base64 and remove any extra spaces
         }
 
         function startChallenge() {
@@ -80,9 +80,15 @@
             let userAnswer = document.getElementById("answer").value.trim();
             let correctAnswer = decodeBase64(encryptedAnswers[currentQuestion]);
 
+            console.log(`User Answer: ${userAnswer}, Correct Answer: ${correctAnswer}`); // Debugging
+
             if (userAnswer === correctAnswer) {
                 currentQuestion++;
-                loadQuestion();
+                if (currentQuestion < questions.length) {
+                    loadQuestion();
+                } else {
+                    showCertificate();
+                }
             } else {
                 alert("Incorrect answer, try again.");
             }
