--- a/index.html
+++ b/index.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: background 0.3s;
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OS Challenge</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <style>
+        /* ... (keep your existing styles unchanged except for .certificate) ... */
+
+        .certificate {
+            border: 1px solid #000000; /* Thin black border */
+            padding: 30px;
+            width: 90%;
+            max-width: 800px; /* Wider for a professional look */
+            margin: 20px auto;
+            text-align: center;
+            background: #ffffff; /* Plain white background */
+            color: #000000; /* All text in black */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
+            border-radius: 5px; /* Slightly rounded corners */
+            font-family: 'Times New Roman', serif; /* Classic font */
         }
-        button:hover {
-            background-color: #0056b3;
+        .certificate .logo {
+            width: 100px; /* Reduced size to fit better */
+            border: 1px solid #000000; /* Thin black border for logo */
+            border-radius: 50%; /* Circular logo */
+            padding: 8px;
+            background: #fff;
+        }
+        .certificate h2 {
+            font-size: 36px;
+            color: #000000; /* Black heading */
+            margin: 10px 0;
+        }
+        .certificate p {
+            font-size: 18px;
+            margin: 8px 0;
+            color: #000000; /* Black text */
+        }
+        .certificate h3 {
+            font-size: 28px;
+            color: #000000; /* Black for name and date */
+            margin: 10px 0;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+        .certificate span {
+            font-style: italic;
+            color: #000000; /* Black for roll number */
         }
     </style>
 </head>
 <body>
-    <div class="container" id="start-screen">
-        <h2>20CST206 Operating Systems Challenge</h2>
-        <h2>Enter Your Details</h2>
-        <input type="text" id="userName" class="styled-input" placeholder="Enter your full name">
-        <input type="text" id="userRoll" class="styled-input" placeholder="Enter your roll number">
-        <button onclick="startChallenge()">Start Challenge</button>
-    </div>
+    <!-- ... (keep your existing HTML unchanged) ... -->
 
-    <div class="container hidden" id="challenge-screen">
-        <h2>OS Challenge</h2>
-        <div id="question-container" class="question-container">
-            <img src="" id="question-image" alt="Question will appear here">
-            <input type="text" id="answer" class="styled-input" placeholder="Enter your answer">
-        </div>
-        <button onclick="checkAnswer()">Submit</button>
-    </div>
-
-   <div id="certificate" class="certificate hidden">
+    <div id="certificate" class="certificate hidden">
         <img src="logo.png" class="logo" alt="Logo">
         <h2>Certificate of Completion</h2>
         <p>This is to certify that</p>
@@ -47,7 +71,7 @@
         const questions = ["q1.png", "q2.png", "q3.png", "q4.png", "q5.png"];
         const answers = ["4", "24", "1", "30", "9"];
         let userName = "", userRoll = "";
-     
+
         function startChallenge() {
             userName = document.getElementById("userName").value;
             userRoll = document.getElementById("userRoll").value;
@@ -79,4 +103,20 @@
             }
         }
 
+        function showCertificate() {
+            document.getElementById("challenge-screen").classList.add("hidden");
+            document.getElementById("certificate").classList.remove("hidden");
+            document.getElementById("certName").textContent = userName;
+            document.getElementById("certRoll").textContent = userRoll;
+            document.getElementById("certDate").textContent = new Date().toDateString();
+            setTimeout(downloadCertificate, 1000);
+        }
+
+        function downloadCertificate() {
+            let element = document.getElementById("certificate");
+            let filename = `${userRoll}_${userName.replace(/\s+/g, '_')}.pdf`; // RollNumber_Name format
+            html2pdf().from(element).set({ filename: filename }).save();
+        }
+    </script>
+</body>
 </html>
