--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>OS Challenge</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-        /* ... (keep your existing styles unchanged except for .certificate) ... */
-
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+            background-color: #1e1e1e;
+            color: white;
+        }
+        .hidden {
+            display: none;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+            background: #2a2a2a;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+        }
         .certificate {
             border: 1px solid #000000; /* Thin black border */
             padding: 30px;
@@ -22,9 +38,9 @@
             font-family: 'Times New Roman', serif; /* Classic font */
         }
         .certificate .logo {
-            width: 100px; /* Reduced size to fit better */
-            border: 1px solid #000000; /* Thin black border for logo */
-            border-radius: 50%; /* Circular logo */
+            width: 70px; /* Reduced size to fit better */
+            border: none; /* Thin black border for logo */
+            
             padding: 8px;
             background: #fff;
         }
@@ -49,12 +65,62 @@
             font-style: italic;
             color: #000000; /* Black for roll number */
         }
+        .question-container img {
+            width: 100%;
+            max-width: 500px;
+            margin: 10px auto;
+            display: block;
+            border-radius: 10px;
+            box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.1);
+        }
+        .styled-input {
+            display: block;
+            margin: 10px auto;
+            padding: 12px;
+            width: 100%;
+            border-radius: 5px;
+            border: 1px solid #555;
+            font-size: 16px;
+            text-align: center;
+            max-width: 400px;
+            background-color: #444;
+            color: white;
+        }
+        button {
+            padding: 12px 20px;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
-    <!-- ... (keep your existing HTML unchanged) ... -->
+    <div class="container" id="start-screen">
+        <h2>20CST206 Operating Systems Challenge</h2>
+        <h2>Enter Your Details</h2>
+        <input type="text" id="userName" class="styled-input" placeholder="Enter your full name">
+        <input type="text" id="userRoll" class="styled-input" placeholder="Enter your roll number">
+        <button onclick="startChallenge()">Start Challenge</button>
+    </div>
 
-    <div id="certificate" class="certificate hidden">
+    <div class="container hidden" id="challenge-screen">
+        <h2>OS Challenge</h2>
+        <div id="question-container" class="question-container">
+            <img src="" id="question-image" alt="Question will appear here">
+            <input type="text" id="answer" class="styled-input" placeholder="Enter your answer">
+        </div>
+        <button onclick="checkAnswer()">Submit</button>
+    </div>
+
+   <div id="certificate" class="certificate hidden">
         <img src="logo.png" class="logo" alt="Logo">
         <h2>Certificate of Completion</h2>
         <p>This is to certify that</p>
